syntax = "proto3";

package org.couchers.api.pages;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "annotations.proto";
import "threads.proto";

service Pages {
  option (auth_level) = AUTH_LEVEL_SECURE;

  rpc CreatePlace(CreatePlaceReq) returns (Page) {
    // Creates a place
  }

  rpc CreateGuide(CreateGuideReq) returns (Page) {
    // Creates a guide
  }

  rpc GetPage(GetPageReq) returns (Page) {
    // Gets a page
  }

  rpc UpdatePage(UpdatePageReq) returns (Page) {
    // Edit a page
  }

  rpc TransferPage(TransferPageReq) returns (Page) {
    // Transfer a page you own to either a group or a community
  }

  rpc ListUserPlaces(ListUserPlacesReq) returns (ListUserPlacesRes) {
    // Gets a list of places pages a user owns
  }

  rpc ListUserGuides(ListUserGuidesReq) returns (ListUserGuidesRes) {
    // Gets a list of guide pages a user owns
  }
}

message Coordinate {
  double lat = 1;
  double lng = 2;
}

enum PageType {
  // point of interest, landmark, tourist attraction, etc
  PAGE_TYPE_PLACE = 0;
  // guide
  PAGE_TYPE_GUIDE = 1;
  // main page of a group or a community
  PAGE_TYPE_MAIN_PAGE = 2;
}

message Page {
  int64 page_id = 1;
  PageType type = 2;
  // a short URL fragment generated from the name, e.g. New York City: a guide to Phá»Ÿ might become
  // new-york-city-guide-to-pho
  string slug = 3;
  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp last_edited = 5;
  int64 last_editor_user_id = 6;
  int64 creator_user_id = 7;
  oneof owner {
    int64 owner_user_id = 8;
    int64 owner_community_id = 17;
    int64 owner_group_id = 9;
  }
  org.couchers.api.threads.Thread thread = 20;

  string title = 11;
  string content = 12; // CommonMark without images
  // empty string if no photo
  string photo_url = 19;
  string address = 13;
  Coordinate location = 14;
  repeated int64 editor_user_ids = 15;
  bool can_edit = 16;
  bool can_moderate = 18;
}

message CreatePlaceReq {
  string title = 1;
  string content = 2;
  // from media server
  string photo_key = 5;
  string address = 3;
  Coordinate location = 4;
}

message CreateGuideReq {
  string title = 1;
  string content = 2;
  // from media server
  string photo_key = 6;
  int64 parent_community_id = 3;
  string address = 4; // optional
  Coordinate location = 5; // optional
}

message GetPageReq {
  int64 page_id = 1;
}

message UpdatePageReq {
  int64 page_id = 1;

  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue content = 3;
  // from media server, set to empty string to clear
  google.protobuf.StringValue photo_key = 6;
  google.protobuf.StringValue address = 4;

  // we can detect lack of this sub-message without *Value stuff, and location cannot be set to null
  Coordinate location = 5;
}

message TransferPageReq {
  int64 page_id = 1;
  oneof new_owner {
    int64 new_owner_community_id = 3;
    int64 new_owner_group_id = 2;
  }
}

message ListUserPlacesReq {
  // the user to get places from, set to 0 for current user
  uint32 user_id = 1;

  uint32 page_size = 2;
  string page_token = 3;
}

message ListUserPlacesRes {
  repeated org.couchers.api.pages.Page places = 1;

  string next_page_token = 2;
}

message ListUserGuidesReq {
  // the user to get guides from, set to 0 for current user
  uint32 user_id = 1;

  uint32 page_size = 2;
  string page_token = 3;
}

message ListUserGuidesRes {
  repeated org.couchers.api.pages.Page guides = 1;

  string next_page_token = 2;
}
